--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,5 +1,31 @@
-wrapper {
-    border-bottom: black solid 1px;
-    padding: 15, 10;
-    text-align: right
+.wrapper {
+    background-color: rgb(207, 223, 225);
+    box-shadow: 0px 3px 20px 1px rgba(0, 0, 0, 0.362);
+    margin: 0 auto;
+    padding: .5rem 4rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logoContainer {
+    display: flex;
+    align-items: center;
+}
+
+.logoImg {
+    height: 4.5rem;
+    transform: rotate(-20deg);
+    margin: 0 1rem;
+}
+
+.userContainer {
+    width: 300px;
+    animation: mymove 5s 1;
+    position: relative;
+    color: rgb(13, 61, 144);
+}
+
+@keyframes mymove {
+    from {left: 0px;}
+    to {left: 100px;}
 }
